add support for wireguard upgrade golang upgrade REST API generation
