# gen/vpnapi/model_status.go
@@ -1,10 +1,11 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
 /*
  * VPN Gateway API
  *
  * A REST compliant API to manage a VPN Gateway instance.
  *
  * API version: 1.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
 package vpnapi
@@ -13,6 +14,9 @@ type Status struct {
 
 	// Public IP that requests going through this gateway will have as a source
 	CurrentPublicIp string `json:"currentPublicIp"`
+
+	// Currently active VPN Client, blank if the VPN Gateway is not connected.
+	ActiveVpnClient string `json:"activeVpnClient"`
 
 	// Currently active VPN Configuration, blank if the VPN Gateway is not connected.
 	ActiveVpnConfig string `json:"activeVpnConfig"`
@@ -25,6 +29,7 @@ type Status struct {
 func AssertStatusRequired(obj Status) error {
 	elements := map[string]interface{}{
 		"currentPublicIp": obj.CurrentPublicIp,
+		"activeVpnClient": obj.ActiveVpnClient,
 		"activeVpnConfig": obj.ActiveVpnConfig,
 		"message":         obj.Message,
 	}
@@ -37,14 +42,7 @@ func AssertStatusRequired(obj Status) error {
 	return nil
 }
 
-// AssertRecurseStatusRequired recursively checks if required fields are not zero-ed in a nested slice.
-// Accepts only nested slice of Status (e.g. [][]Status), otherwise ErrTypeAssertionError is thrown.
-func AssertRecurseStatusRequired(objSlice interface{}) error {
-	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
-		aStatus, ok := obj.(Status)
-		if !ok {
-			return ErrTypeAssertionError
-		}
-		return AssertStatusRequired(aStatus)
-	})
+// AssertStatusConstraints checks if the values respects the defined constraints
+func AssertStatusConstraints(obj Status) error {
+	return nil
 }
